--- a/Pipfile
+++ b/Pipfile
@@ -3,3 +3,8 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 python_version = "3"
+
+[dev-packages]
+flake8 = "*"
+
+[packages]
